选择器相关内容

--- a/04_标签选择器.html
+++ b/04_标签选择器.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>初始CSS</title>
+  <title>标签选择器</title>
   <style>
-    /* 注释这样写，与HTML不同 */
     p {
-      /* 调节字体颜色 */
-      color: rgb(46, 32, 202);
-      /* 调节字号大小 */
-      font-size: 30px;
+      color: red;
     }
   </style>
 </head>
 
 <body>
-  <p>体验CSS</p>
+  <p>文段1</p>
+  <p>文段2</p>
+  <p>文段3</p>
+
 </body>
 
 </html>
