对已经学过的css进行了复习

--- a/13_行高.html
+++ b/13_行高.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>行高</title>
   <style>
-    p{
-      line-height: 40px;
+    .p {
+      line-height: 60px;
+      font-size: 50px;
+      font-style: italic;
     }
   </style>
 </head>
+
 <body>
-  <p>2023新版前端HTML5+CSS3+移动web视频教程，h5、css3、flex、rem和vw/vh等超实用项目案例全涵盖，课程从前端开发环境开始讲解，课程内容既包含企业中制作网页的基础前端知识，又包含企业PC端网页和移动端网页的制作流程，通过每日案例、学成在线和小兔鲜儿、极速问诊、酷我手机网页、腾讯全端等</p>
+  <p class="p">
+    2023新版前端HTML5+CSS3+移动web视频教程，h5、css3、flex、rem和vw/vh等超实用项目案例全涵盖，课程从前端开发环境开始讲解，课程内容既包含企业中制作网页的基础前端知识，又包含企业PC端网页和移动端网页的制作流程，通过每日案例、学成在线和小兔鲜儿、极速问诊、酷我手机网页、腾讯全端等
+  </p>
 </body>
+
 </html>
