--- a/Test_综合案例2_CSS简介.html
+++ b/Test_综合案例2_CSS简介.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS简介
+  <title>CSS简介</title>
     <style>
       h1{
         color: #333333;
@@ -11,11 +11,27 @@
       .first{
         text-indent:2em;
       }
+      a{
+        color: #0069c2;
+      }
+      .div{
+        line-height:30px;
+        font-size:14px;
+      }
+      ul{
+        line-height: 30px;
+        font-size: 14px;
+      }
     </style>
-  </title>
 </head>
 <body>
   <h1>CSS(层叠样式表)</h1>
-  <div class="first">层叠样式表(Cascading Style Sheets，缩写为CSS)，是一种样式表语言，用来述 HTML 或 XML(包括 SVGMathML、XHTML 类的 ML 分支语言) 文档的呈现.CSS 述了在屏幕、纸质、音频等其它媒体上的元景应该如何被渲染的问题</div>
+  <div class="first div">层叠样式表(Cascading Style Sheets，缩写为CSS)，是一种 <a href="#">样式表</a>语言，用来述 HTML 或 XML(包括 SVGMathML、XHTML 类的 ML 分支语言) 文档的呈现.CSS 述了在屏幕、纸质、音频等其它媒体上的元景应该如何被渲染的问题。</div>
+  <div class="first div"><strong>CSS是开放网的核心语言之一，</strong>由 W3C 规范 实现跨测觉器的标准化。SS 节省了大量的工作样式可以通过定义保存在外部,CS 文件中，同时控制多网页的布局，这意着开发者不必经历在所有网页上编布局的麻烦，SS 被分为不同等级:SS1 现已废弃，(SS21 是推荐标准，(SS3 分成多个小模块目正在标准化中。</div>
+  <ul>
+    <li>CSS介绍 如果你是 Web 开发的新手，请务必读我们的CSS基础文章以学习 CSS 的含义和用法</li>
+    <li>CSS 教程 我们的 CSS 学习区 包含了丰富的教程，它们覆盖了全部基础知识，能使你在CSS 之路上从初出茅到游刃有余</li>
+    <li>CSS参考针对资深Web 开发者的 <a href="#">详细参考手册</a>，描述了CSS 的各个属性与概念。</li>
+  </ul>
 </body>
 </html>
