自学进度，好几天的

--- a/33.5_盒子模型-外边距.html
+++ b/33.5_盒子模型-外边距.html
@@ -10,6 +10,7 @@
       height: 200px;
       background-color: pink;
       box-sizing: border-box;
+      /* auto版心居中，宽度由浏览器渲染时得到，效果为任意尺寸下居中 */
       margin:10px auto;
       padding: 20px;
     }
