--- a/39_盒子模型-阴影.html
+++ b/39_盒子模型-阴影.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>盒子模型-组成</title>
+  <title>盒子模型-阴影</title>
   <style>
     div{
-      width: 500px;
-      height: 500px;
-      padding: 20px;
-      border: 1px rgb(113, 113, 226);
-      margin: 30px;
+      width: 200px;
+      height: 200px;
       background-color: pink;
+      margin: 50px auto;
+      text-align: center;
+      box-shadow: 2px 5px 10px 1px;
     }
   </style>
 </head>
 <body>
-  <div>div测试文字</div>
+  <div>测试文字</div>
 </body>
 </html>
