学习停滞了哈哈哈

--- a/23_伪类选择器.html
+++ b/23_伪类选择器.html
@@ -7,7 +7,7 @@
   <style>
     /* 任何标签都可以设置鼠标悬停的状态*/
     a:hover{
-      color:red;
+      color:rgb(218, 56, 56);
     }
     .box:hover{
       color:green;
