--- a/Test_综合案例6_新浪新闻(废案).html
+++ b/Test_综合案例6_新浪新闻(废案).html
@@ -11,7 +11,12 @@
       margin: 0px;
       box-sizing: border-box;
     }
-
+    a{
+      text-decoration: none;
+    }
+    li{
+      list-style: none;
+    }
     .box_1 {
       width: 691px;
       height: 366px;
